--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
             <span class="text nav-text" href="#">Logout</span>
           </a>
         </li>
-        <li class="mode">
+        <li class="dark_mode">
           <div class="sun-moon">
             <i class='bx bx-moon icon moon'></i>
             <i class='bx bx-sun icon sun'></i>
