--- a/templates/page1.html
+++ b/templates/page1.html
@@ -83,7 +83,7 @@
 
   <section class="home">
   </section>
-<script src="{{ url_for('static', filename='base_11.js') }}"></script>
+<script src="{{ url_for('static', filename='base_of_page.js') }}"></script>
 </body>
 
 </html>
