--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
 
   <section class="home">
   </section>
-<script src="{{ url_for('static', filename='sidebar_utilities.js') }}"></script>
+<script src="{{ url_for('static', filename='sidebarFucs.js') }}"></script>
 </body>
 
 </html>
