--- a/static/styles/analytics.css
+++ b/static/styles/analytics.css
@@ -19,12 +19,14 @@
 .user-table th {
     background-color: #f2f2f2;
 }
-
+:root{
+    --primary-color: #4CAF50;
+}
 .success-message {
     position: fixed;
     top: 0;
     right: 0;
-    background-color: #4CAF50;
+    background-color: var(--primary-color);
     color: white;
     padding: 15px;
     margin: 15px;
