--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -27,18 +27,23 @@ body {
   line-height: 0;
 }
 
-
+:root{
+  --white: #fff;
+}
 ::selection {
   background-color: var(--primary-color);
-  color: #fff;
+  color: var(--white);
 }
-
+:root {
+  --primary-color-light: #3a3b3c;
+  --toggle-color: #fff;
+  --text-color: #ccc;
+}
 body.dark {
   --body-color: none;
   --sidebar-color: #242526;
   --primary-color: rgb(63, 90, 211);
-  --primary-color-light: #3a3b3c;
-  --toggle-color: #fff;
-  --text-color: #ccc;
-  color: #fff;
+  background-color: var(--primary-color-light);
+  background-color: var(--toggle-color);
+  color: var(--text-color);
 }
