Change according to your request

--- a/static/View/templates/main_page.html
+++ b/static/View/templates/main_page.html
@@ -23,7 +23,7 @@
     <header>
       <div class="image-text">
         <span class="image">
-          <img src="/static/images/logo.jpg" alt="">
+          <img src="/images/logo.jpg" alt="">
         </span>
         <div class="text logo-text">
           <span class="name">TopTeam</span>
