--- a/static/View/templates/base.html
+++ b/static/View/templates/base.html
@@ -17,7 +17,7 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 
 </head>
-<body style="background-image:url('static/images/img.jpg')">
+<body style="background-image:url('../../images/img.jpg')">
   <nav class="sidebar close">
 
     <header>
