--- a/static/view/templates/login.html
+++ b/static/view/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% block title %}login page{% endblock %}
+{% block title %}Login Page{% endblock %}
 
 {% block content %}
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/style.css')}}" >
@@ -15,7 +15,7 @@
           {% endif %}
      {% endwith %}
 <form action="{{ url_for('index')}}" method="post" id="Loginform">
-     <p><input type="text" name="nm"/></p>
+     <p><input type="text" name="name"/></p>
      <p><input type="submit" value="submit"/></p>
 
 </form>
