--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -85,7 +85,10 @@ body {
 .remember-forgot a:hover {
     text-decoration: underline;
 }
+:root {
+    --color:#333;
 
+}
 .wrapper .btn {
     width: 100%;
     height: 45px;
@@ -96,7 +99,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
     font-size: 16px;
-    color: #333;
+    color:var(--color);
     font-weight: 600;
     transition: 0.2s;
     position: relative;
