--- a/static/view/templates/analytics.html
+++ b/static/view/templates/analytics.html
@@ -3,9 +3,7 @@
 {% block title %}Analytics{% endblock %}
 
 {% block content %}
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/style.css')}}" >
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/base.css')}}" >
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/sidebar.css')}}" >
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/darkMode.css')}}" >
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/analytics.css')}}" >
 
@@ -13,13 +11,13 @@
     {% if messages %}
       <div class="success-message">
         {% for msg in messages %}
-          <p style="color: white;">{{msg}}</p>
+          <p class="message_alert">{{msg}}</p>
         {% endfor %}
       </div>
     {% endif %}
   {% endwith %}
 
-  <table border="1" style="color: white;">
+  <table class="table">
     <thead>
       <tr>
         <th>ID</th>
