--- a/static/view/templates/base.html
+++ b/static/view/templates/base.html
@@ -1,5 +1,4 @@
 <!--this page is a sidebar page -->
-{% extends "base.html" %}
 {% block content %}
 <!--    <h1>Home page </h1>-->
 
@@ -16,14 +15,15 @@
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/darkMode.css')}}" >
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/analytics.css')}}" >
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+
 </head>
-<body src='/static/images/img.jpg'>
+<body style="background-image:url('../../images/img.jpg')">
   <nav class="sidebar close">
 
     <header>
       <div class="image-text">
         <span class="image">
-          <img src="/images/logo.jpg" alt="">
+          <img src="logo.jpg" alt="">
         </span>
         <div class="text logo-text">
           <span class="name">TopTeam</span>
@@ -61,13 +61,13 @@
         </ul>
       </div>
       <div class="bottom-content">
-        <li class="">
-          <a href="#">
+        <li>
+          <a>
             <i class='bx bx-log-out icon'></i>
             <span class="text nav-text" href="#">Logout</span>
           </a>
         </li>
-        <li class="mode">
+        <li class="dark_mode">
           <div class="sun-moon">
             <i class='bx bx-moon icon moon'></i>
             <i class='bx bx-sun icon sun'></i>
@@ -83,7 +83,7 @@
 
   <section class="home">
   </section>
-<script src="{{ url_for('static', filename='sidebar_utilities.js') }}"></script>
+<script src="{{ url_for('static', filename='sidebarFucs.js') }}"></script>
 </body>
 
 </html>
