--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 </head>
 
-<body style="background-image:url('../../images/img.jpg')">
+<body style="background-image:url('../static/images/img.jpg')">
     <div class="wrapper">
         <form action='{{ url_for("index")}}' method="POST" id="LoginForm">
             <h1>Login</h1>
