--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -2,7 +2,7 @@
 
 :root {
   --body-color: none;
-  --sidebar-color: #fff;
+  --sidebar-color: #e7e4e4;
   --primary-color: rgb(63, 90, 211);
   --primary-color-light1: #f6f5ff;
   --toggle-color1: #ddd;
@@ -15,6 +15,8 @@
   --primary-color-light2: #3a3b3c;
   --toggle-color2: #fff;
   --text-color2: #ccc;
+  --color: #333;
+  --table-header-bg-color: black;
 }
 
 body {
@@ -38,7 +40,7 @@ body {
 
 body.dark {
   --body-color: none;
-  --sidebar-color: #242526;
+  --sidebar-color: #dcdbdb;
   --primary-color: rgb(63, 90, 211);
   background-color: var(--primary-color-light2);
   background-color: var(--toggle-color2);
