--- a/static/styles/darkMode.css
+++ b/static/styles/darkMode.css
@@ -1,101 +1,111 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,700,900');
+/* darkmode.css */
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+:root {
+  --body-color: none;
+  --sidebar-color: #ffffff;
+  --primary-color: rgb(63, 90, 211);
+  --toggle-color: #fff;
+  --text-color: #000000;
+}
+
+body.dark {
+  --sidebar-color: #000000;
+  --toggle-color: #000;
+  --text-color: #ffffff;
 }
 
 .sidebar .menu-bar .mode {
-    border-radius: 6px;
-    background-color: var(--primary-color-light);
-    position: relative;
-    transition: var(--tran-05);
+  border-radius: 6px;
+  background-color: var(--primary-color-light);
+  position: relative;
+  transition: var(--tran-05);
 }
 
 .menu-bar .mode .sun-moon {
-    height: 50px;
-    width: 60px;
+  height: 50px;
+  width: 60px;
 }
 
 .mode .sun-moon i {
-    position: absolute;
+  position: absolute;
 }
 
 .mode .sun-moon i.sun {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 body.dark .mode .sun-moon i.sun {
-    visibility: visible;
+  visibility: visible;
 }
 
 body.dark .mode .sun-moon i.moon {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 .menu-bar .bottom-content .toggle-switch {
-    position: absolute;
-    right: 0;
-    height: 100%;
-    min-width: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 6px;
-    cursor: pointer;
+  position: absolute;
+  right: 0;
+  height: 100%;
+  min-width: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 6px;
+  cursor: pointer;
 }
 
 .toggle-switch .switch {
-    position: relative;
-    height: 22px;
-    width: 40px;
-    border-radius: 25px;
-    background-color: var(--toggle-color);
-    transition: var(--tran-05);
+  position: relative;
+  height: 22px;
+  width: 40px;
+  border-radius: 25px;
+  background-color: var(--toggle-color);
+  transition: var(--tran-05);
 }
 
 .switch::before {
-    content: "";
-    position: absolute;
-    height: 15px;
-    width: 15px;
-    border-radius: 50%;
-    top: 50%;
-    left: 5px;
-    transform: translateY(-50%);
-    background-color: var(--sidebar-color);
-    transition: var(--tran-04);
+  content: "";
+  position: absolute;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  background-color:white;
+  transition: var(--tran-04);
 }
 
 body.dark .switch::before {
-    left: 20px;
+  left: 20px;
 }
 
 .home {
-    position: absolute;
-    top: 0;
-    left: 250px;
-    height: 100vh;
-    width: calc(100% - 250px);
-    background-color: var(--body-color);
-    transition: var(--tran-05);
+  position: absolute;
+  top: 0;
+  left: 250px;
+  height: 100vh;
+  width: calc(100% - 250px);
+  background-color: var(--body-color);
+  transition: var(--tran-05);
 }
 
 .home .text {
-    font-size: 30px;
-    font-weight: 500;
-    color: var(--text-color);
-    padding: 12px 60px;
+  font-size: 30px;
+  font-weight: 500;
+  color: var(--text-color);
+  padding: 12px 60px;
 }
 
 .sidebar.close ~ .home {
-    left: 78px;
-    height: 100vh;
-    width: calc(100% - 78px);
+  left: 78px;
+  height: 100vh;
+  width: calc(100% - 78px);
 }
 
 body.dark .home .text {
-    color: var(--text-color);
+  color: var(--text-color);
+}
+.sidebar li.search-box input[type="text"]{
+  color:white;
 }
