--- a/static/styles/sidebar.css
+++ b/static/styles/sidebar.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,700,900');
 
+:root {
+  --color: #333;
+  --primary-color-light: none;
+  --sidebar-color: #242526;
+  --text-color: #000000;
+}
+
 .sidebar {
   position: fixed;
   top: 0;
@@ -7,8 +14,8 @@
   height: 100%;
   width: 250px;
   padding: 10px 14px;
-  background: var(--sidebar-color);
-  transition: var(--tran-05);
+  background:var(--sidebar-color);
+  transition: width 0.5s;
   z-index: 100;
 }
 
@@ -40,7 +47,7 @@
   font-weight: 500;
   white-space: nowrap;
   opacity: 1;
-  transition: var(--tran-03);
+  transition: opacity 0.3s;
 }
 
 .sidebar.close .text {
@@ -77,7 +84,7 @@
   justify-content: center;
   font-size: 22px;
   cursor: pointer;
-  transition: var(--tran-05);
+  transition: transform 0.3s;
 }
 
 body.dark .sidebar header .toggle {
@@ -96,7 +103,7 @@ body.dark .sidebar header .toggle {
   border-radius: 6px;
   background-color: var(--primary-color-light);
   cursor: pointer;
-  transition: var(--tran-05);
+  transition: background-color 0.3s; /* Adjusted transition */
 }
 
 .sidebar li.search-box input {
@@ -109,9 +116,11 @@ body.dark .sidebar header .toggle {
   border-radius: 6px;
   font-size: 17px;
   font-weight: 500;
-  transition: var(--tran-05);
+  transition: background-color 0.3s;
 }
-
+.sidebar li.search-box input[type="text"]{
+  color:#000000;
+}
 .sidebar li a {
   list-style: none;
   height: 100%;
@@ -122,9 +131,14 @@ body.dark .sidebar header .toggle {
   width: 100%;
   border-radius: 6px;
   text-decoration: none;
-  transition: var(--tran-03);
+  transition: background-color 0.3s;
 }
-
+.logo-text{
+  text-align: center;
+  display: flex;
+  flex-direction:column;
+  margin-top:20px;
+}
 .sidebar li a:hover {
   background-color: var(--primary-color);
 }
@@ -149,4 +163,15 @@ body.dark .sidebar li a:hover .text {
 
 .menu-bar::-webkit-scrollbar {
   display: none;
+}
+
+body.dark {
+  --sidebar-color: #1f1f1f;
+  --text-color: #ffffff;
+}
+body:not(.dark) .toggle-switch .switch{
+  background-color: #1f1f1f;
+}
+body:not(.dark) .sidebar li.search-box input[type="text"]{
+  color:black;
 }
