--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -1,39 +1,40 @@
 {% extends "base.html" %}
-
 {% block title %}Analytics{% endblock %}
 
 {% block content %}
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/base.css')}}" >
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/darkMode.css')}}" >
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/analytics.css')}}" >
-
-  {% with messages = get_flashed_messages() %}
-    {% if messages %}
-      <div class="success-message">
-        {% for msg in messages %}
-          <p class="message_alert">{{msg}}</p>
-        {% endfor %}
-      </div>
-    {% endif %}
-  {% endwith %}
-
-  <table class="table">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Username</th>
-        <th>Password</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for user in users %}
-        <tr>
-          <td>{{ user.id }}</td>
-          <td>{% if user.username %}{{ user.username }}{% else %}None{% endif %}</td>
-          <td>{{ user.password }}</td>
-        </tr>
+<link rel="stylesheet" type="text/css" href="/static/styles/style.css">
+<link rel="stylesheet" type="text/css" href="/static/styles/base.css">
+<link rel="stylesheet" type="text/css" href="/static/styles/sidebar.css">
+<link rel="stylesheet" type="text/css" href="/static/styles/darkMode.css">
+<link rel="stylesheet" type="text/css" href="/static/styles/analytics.css">
+<body style="background-image:url('/static/images/img.jpg')"></body>
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <div class="success-message">
+      {% for msg in messages %}
+        <p class="message_alert">{{msg}}</p>
       {% endfor %}
-    </tbody>
-  </table>
+    </div>
+  {% endif %}
+{% endwith %}
+
+<table class="user-table">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Username</th>
+      <th>Password</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for user in users %}
+      <tr>
+        <td>{{ user.id }}</td>
+        <td>{% if user.username %}{{ user.username }}{% else %}None{% endif %}</td>
+        <td>{{ user.password }}</td>
+      </tr>
+    {% endfor %}
+  </tbody>
+</table>
 
 {% endblock %}
