--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/style.css')}}" >
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/base.css')}}" >
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/sidebar.css')}}" >
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/darkMode.css')}}" >
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='styles/analytics.css')}}" >
+ <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles/base.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles/sidebar.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles/darkMode.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles/analytics.css">
     <title>Login Page</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 </head>
