--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/base.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/sidebar.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/darkMode.css">
@@ -13,10 +12,9 @@
     <title>Login Page</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 </head>
-
 <body style="background-image:url('../static/images/img.jpg')">
     <div class="wrapper">
-        <form action='{{ url_for("index")}}' method="POST" id="LoginForm">
+        <form action="{{ url_for('login') }}" method="POST" id="LoginForm">
             <h1>Login</h1>
             <div class="input-box">
                 <input type="text" name="nm" placeholder="Username" required />
@@ -31,15 +29,18 @@
                 <label><input type="checkbox" /> Remember me</label>
                 <a href="#">Forgot password?</a>
             </div>
-            <button type="submit" class="loginPage">
-                Login
-            </button>
+            <button type="button" onclick="submitForm()" class="loginPage">Login</button>
 
             <div class="register-link">
                 <p>Don't have an account? <a href="#">Register</a></p>
             </div>
         </form>
     </div>
-</body>
 
+    <script>
+        function submitForm() {
+            document.getElementById("LoginForm").submit();
+        }
+    </script>
+</body>
 </html>
