fixed the login button and transfered the scripts from thehtml page to script directory

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -51,27 +51,6 @@
             </tbody>
         </table>
     </div>
-    <script>
-        var dropdowns = document.querySelectorAll('.dropdown');
-
-        dropdowns.forEach(function(dropdown) {
-            var button = dropdown.querySelector('.dropbtn');
-            var content = dropdown.querySelector('.dropdown-content');
-
-            button.addEventListener('click', function() {
-                content.classList.toggle('show');
-            });
-        });
-        window.onclick = function(event) {
-            if (!event.target.matches('.dropbtn')) {
-                dropdowns.forEach(function(dropdown) {
-                    var content = dropdown.querySelector('.dropdown-content');
-                    if (content.classList.contains('show')) {
-                        content.classList.remove('show');
-                    }
-                });
-            }
-        }
-    </script>
+<script src="/static/scripts/analytics.js"></script>
 </body>
 </html>
