changed the file in dal and models

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,11 +13,12 @@
 </head>
 <body style="background-image:url('/static/images/img.jpg')">
  <script src="/static/scripts/sidebarFucs.js"></script>
+ <script src="/static/scripts/index.js"></script>
     <nav class="sidebar close">
         <header>
 
                 <span class="image">
-                    <img src="/static/images/logo.png" alt="">
+                    <img src="/static/images/logo.png">
                 </span>
                 <div class="text logo-text">
                     <span class="name">TopTeam</span>
