--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/analytics.css">
 </head>
-<body style="background-image:url('/static/images/img.jpg')">
+<body style="background-image:url('/images/background_img.jpg')">
     <div class="user-block">
         <h2>Users:</h2>
         <table border="1">
