--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="/static/styles/darkMode.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 </head>
-<body style="background-image:url('/static/images/img.jpg')">
+<body style="background-image:url('/images/background_img.jpg')">
  <script src="/static/scripts/sidebarFucs.js"></script>
  <script src="/static/scripts/index.js"></script>
     <nav class="sidebar close">
