--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <title>Login Page</title>
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 </head>
-<body style="background-image:url('../static/images/img.jpg')">
+<body style="background-image:url('../static/images/background_img.jpg')">
     <div class="wrapper">
          <form action="{{ url_for('login') }}" method="POST" id="LoginForm">
             <h1>Login</h1>
