--- a/templates/base.html
+++ b/templates/base.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
+
     <link rel="stylesheet" type="text/css" href="/static/styles/style.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/base.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/sidebar.css">
     <link rel="stylesheet" type="text/css" href="/static/styles/darkMode.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 </head>
-<body style="background-image:url('/images/background_img.jpg')">
+<body style="background-image:url('static/images/background_img.jpg')">
  <script src="/static/scripts/sidebarFucs.js"></script>
  <script src="/static/scripts/index.js"></script>
     <nav class="sidebar close">
