--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,700,900');
+@font-face {
+  font-family: 'ariel';
+}
 
 :root {
     --color: #333;
